Update autosuggest theme and fix z-index

--- a/components/Autocomplete/index.scss
+++ b/components/Autocomplete/index.scss
@@ -86,7 +86,7 @@
   padding: 8px 15px;
 }
 
-.suggestionFocused {
+.suggestionHighlighted {
   background: $blue;
   color: $white;
   cursor: pointer;
